# hexapod

hexapod_gazebo_description/: CMakeLists.txt  CMakeLists.txt~  hexapod.kdev4  package.xml
hexapod_gazebo_description/control_config/: .one_dof_ctl_params.yaml.swp  hexapod_ctl_3_joint_params.yaml  hexapod_ctl_params.yaml  hexapod_ctl_params.yaml~
hexapod_gazebo_description/devel/: .catkin  .rosinstall  setup.sh
hexapod_gazebo_description/launch/: cylinder.launch  cylinder.launch~  ground.launch~  hexapod.launch  hexapod.launch~  hexapod_gazebo.launch  hexapod_gazebo.launch~  hexapod_rviz.launch  hexapod_rviz.launch~  hexapod_w_lidar.launch  hexapod_w_lidar.launch~  hexapod_with_wall.launch~  mobot_w_lidar.launch  stick.launch  stick.launch~  support_hexapod.launch  wall.launch  wall.launch~  wall2_gazebo.launch~  wall_gazebo.launch~
hexapod_gazebo_description/meshes/: body.STL
my_hexapod_control/: CMakeLists.txt  CMakeLists.txt~  my_hexapod_control.kdev4  package.xml
my_hexapod_control/.kdev4/: my_hexapod_control.kdev4
my_hexapod_control/devel/: .catkin  .rosinstall  setup.sh
my_hexapod_control/devel/lib/pkgconfig/: my_hexapod_control.pc
my_hexapod_control/devel/share/my_hexapod_control/cmake/: my_hexapod_controlConfig.cmake
my_hexapod_control/launch/: my_hexapod_control.launch
my_hexapod_control/params/: my_hexapod.yaml  my_hexapod.yaml~  my_hexapod_3_joint.yaml
my_hexapod_control/src/: control.cpp  control.cpp~  control.h  control.h~  gait.cpp  gait.cpp~  gait.h  gait.h~  ik.cpp  ik.cpp~  ik.h  ik.h~  my_hexapod_controller.cpp  my_hexapod_controller.cpp~  odom_transform.cpp  odom_transform.cpp~
(+32 files in other folders)
